--- a/_includes/author-links.html
+++ b/_includes/author-links.html
@@ -116,5 +116,13 @@
       </li>
     {%- endif -%}
 
+    {%- if _author.rubygems -%}
+      <li title="{{ _locale_string_follow | replace: '[NAME]', 'rubygems' }}">
+        <a class="button button--circle rubygems-button" itemprop="sameAs" href="https://rubygems.org/profiles/{{ _author.rubygems }}" target="_blank">
+          <div class="icon">{%- include svg/icon/social/rubygems.svg -%}</div>
+        </a>
+      </li>
+    {%- endif -%}
+
   </ul>
 </div>
