--- a/_sass/skins/_dark.scss
+++ b/_sass/skins/_dark.scss
@@ -69,6 +69,7 @@ $douban-color:     #42bd56;
 $linkedin-color:   #1074af;
 $github-color:     #000;
 $npm-color:        #fff;
+$rubygems-color:   #e9573f;
 
 // highlight colors
 @import "skins/highlight/tomorrow-night";
