[UPDATE] SEO images

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,6 +1,12 @@
 <!-- start custom head snippets -->
 
+<!-- SEARCH ENGINE OPTIMIZER -->
+<meta name="twitter:image:src" content="assets/bg-0.jpg">
+<meta property="og:image" content="assets/bg-0.jpg">
+
+<!-- GOOGLE ADS -->
 <script data-ad-client="ca-pub-3090906451408145" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2GCXV5VYVS"></script>
 <script>
