--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -4,4 +4,7 @@
 <meta name="twitter:image:src" content="assets/bg-0.jpg">
 <meta property="og:image" content="assets/bg-0.jpg">
 
+<!-- ADS SENSE -->
+<script data-ad-client="ca-pub-3090906451408145" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <!-- end custom head snippets -->
