[ADD] style across the pages

--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -23,6 +23,9 @@ titles:
   fr-FR   : *FR
   fr-LU   : *FR
   # @end locale config
+header:
+  theme: dark
+  background: 'linear-gradient(135deg, rgb(251, 176, 59), rgb(41, 171, 226))'
 ---
 
 <div class="layout--archive js-all">
