--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -2,6 +2,9 @@
 layout: page
 title: 404
 show_title: false
+header:
+  theme: dark
+  background: 'linear-gradient(135deg, rgb(251, 176, 59), rgb(41, 171, 226))'
 ---
 <div class="layout--404">
   <div class="sign">
