--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -1,6 +1,9 @@
 ---
 layout: page
 type: article
+header:
+  theme: dark
+  background: 'linear-gradient(135deg, rgb(251, 176, 59), rgb(41, 171, 226))'
 ---
 
 {%- include snippets/assign.html
