--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,8 +1,9 @@
 <!-- start custom head snippets -->
 
 <!-- SEARCH ENGINE OPTIMIZER -->
-<meta name="twitter:image:src" content="assets/bg-0.jpg">
-<meta property="og:image" content="assets/bg-0.jpg">
+<meta name="author" content="Mashanz (Hanjara CA)">
+<meta name="image" property="og:image" content="assets/bg_cover.webp">
+<meta name="twitter:image:src" content="assets/bg_cover.webp">
 
 <!-- ADS SENSE -->
 <script data-ad-client="ca-pub-3090906451408145" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
