--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -3,6 +3,8 @@
 <!-- SEARCH ENGINE OPTIMIZER -->
 <meta name="author" content="Mashanz (Hanjara CA)">
 <meta name="image" property="og:image" content="assets/bg_cover.webp">
+<meta property="og:image:width" content="2800" />
+<meta property="og:image:height" content="1600" />
 <meta name="twitter:image:src" content="assets/bg_cover.webp">
 
 <!-- ADS SENSE -->
