--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,10 +2,10 @@
 
 <!-- SEARCH ENGINE OPTIMIZER -->
 <meta name="author" content="Mashanz (Hanjara CA)">
-<meta name="image" property="og:image" content="assets/bg_cover.webp">
+<meta name="image" property="og:image" content="https://mashanz.com/assets/bg_cover.webp">
 <meta property="og:image:width" content="2800" />
 <meta property="og:image:height" content="1600" />
-<meta name="twitter:image:src" content="assets/bg_cover.webp">
+<meta name="twitter:image:src" content="https://mashanz.com/assets/bg_cover.webp">
 
 <!-- ADS SENSE -->
 <script data-ad-client="ca-pub-3090906451408145" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
