--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,6 +5,11 @@
 <meta name="image" property="og:image" content="https://mashanz.com/assets/bg_cover.webp">
 <meta property="og:image:width" content="2800" />
 <meta property="og:image:height" content="1600" />
+<meta property="og:title" content="Mashanz | The Noob Software Engineer"/>
+<meta property="og:url" content="https://mashanz.com"/>
+<meta property="og:site_name" content="Mashanz | The Noob Software Engineer"/>
+<meta property="og:description"content="{%- if page.excerpt -%}{{ page.excerpt | strip_html | strip_newlines | strip | truncate: 160 }}{%- else -%}{{ site.description }}{%- endif -%}" />
+<meta property="og:type" content="Website"/>
 <meta name="twitter:image:src" content="https://mashanz.com/assets/bg_cover.webp">
 
 <!-- ADS SENSE -->
