--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -2,7 +2,7 @@
 
 <!-- SEARCH ENGINE OPTIMIZER -->
 <meta name="author" content="Mashanz (Hanjara CA)">
-<meta name="image" property="og:image" content="https://mashanz.com/assets/bg_cover.webp">
+<meta property="og:image" content="https://mashanz.com/assets/bg_cover.webp">
 <meta property="og:image:width" content="2800" />
 <meta property="og:image:height" content="1600" />
 <meta property="og:title" content="Mashanz | The Noob Software Engineer"/>
