--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,12 +5,12 @@
 <meta property="og:image" content="https://mashanz.com/assets/bg_cover.webp">
 <meta property="og:image:width" content="2800" />
 <meta property="og:image:height" content="1600" />
+<meta property="og:image:alt" content="Belajar Programing, Menjadi Software Engineer, Belajar Automation, Belajar Odoo, Belajar Docker, Belajar Python, Belajar JavaScript, Belajar NodeJS">
 <meta property="og:title" content="Mashanz | The Noob Software Engineer"/>
 <meta property="og:url" content="https://mashanz.com"/>
 <meta property="og:site_name" content="Mashanz | The Noob Software Engineer"/>
 <meta property="og:description"content="{%- if page.excerpt -%}{{ page.excerpt | strip_html | strip_newlines | strip | truncate: 160 }}{%- else -%}{{ site.description }}{%- endif -%}" />
-<meta property="og:type" content="Website"/>
-<meta name="twitter:image:src" content="https://mashanz.com/assets/bg_cover.webp">
+<meta property="og:type" content="website"/>
 
 <!-- ADS SENSE -->
 <script data-ad-client="ca-pub-3090906451408145" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
