--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -15,4 +15,7 @@
 <!-- ADS SENSE -->
 <script data-ad-client="ca-pub-3090906451408145" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
+<!-- CONTENT SECURITY POLICY (CSP) -->
+<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">
+
 <!-- end custom head snippets -->
