[ADD] content from all

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -16,6 +16,6 @@
 <script data-ad-client="ca-pub-3090906451408145" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 
 <!-- CONTENT SECURITY POLICY (CSP) -->
-<meta http-equiv="Content-Security-Policy" content="default-src 'self'; img-src https://*; child-src 'none';">
+<meta http-equiv="Content-Security-Policy" content="default-src *; img-src *; child-src *;">
 
 <!-- end custom head snippets -->
